# C-Plus-Plus-design

./: .gitignore  .gitingore  2048.h  AccountManage.h  CMakeLists.txt  CryptoUtils.h  DataStruct.h  Game.h  LogIn.h  Maze.h  MenuUI.h  Moduel.h  Person.h  README.md  Sign.h  Utils.h  crypto.py  main.cpp
